--- a/index.hbs
+++ b/index.hbs
@@ -24,7 +24,7 @@
     </ul>
     <div class="footer">
       &copy; {{@blog.title}} 2015  | 
-      The theme is based on<a href="https://github.com/SerhoLiu/serholiu.com" target="_blank" style="color: #a33b14;"> MiniAkio</a>.
+      The theme is based on<a href="https://github.com/SerhoLiu/serholiu.com" target="_blank"> MiniAkio</a>.
     </div>
   </div>
 </div>
